# KnowledgeReduce

./: CivicHonors2KGwTest.ipynb  CivicHonorsAdvanced.ipynb  CivicHonorsAdvancedBERTQA.ipynb  CivicHonorsAdvancedKG.ipynb  CivicHonorsAdvancedKGv2.ipynb  CivicHonorsAdvanced_v002.ipynb  CivicHonorsAnalysis.ipynb  CivicHonorsBasicKG.ipynb  CivicHonorsContentExtraction.ipynb  CivicHonorsEnhancedAnalysis.ipynb  CivicHonorsGEXF.ipynb  CivicHonorsGEXFGraphML.ipynb  CivicHonorsGraphML.ipynb  CivicHonorsKGv10.ipynb  CivicHonorsKGv10_Complete.ipynb  CivicHonorsKGv10_Refined.ipynb  CivicHonorsKGv11.ipynb  CivicHonorsKGv12.ipynb  CivicHonorsKGv12_Updated.ipynb  CivicHonorsKGv13.ipynb  CivicHonorsKGv14.ipynb  CivicHonorsKGv15_Simplified.ipynb  CivicHonorsKGv16.ipynb  CivicHonorsKGv17.ipynb  CivicHonorsKGv3.ipynb  CivicHonorsKGv5.ipynb  CivicHonorsKGv6.ipynb  CivicHonorsKGv7.ipynb  CivicHonorsKGv8.ipynb  CivicHonorsKGv9.ipynb  CivicHonorsSimpleKG.ipynb  Detailed_Updated_CivicHonorsKGv18.ipynb  KGpkgBuildv4.ipynb  KnowledgeReduce_CivicHonorsAnalysis.ipynb  KnowledgeReduce_CivicHonorsContentExtraction.ipynb  KnowledgeReduce_CivicHonorsEnhancedAnalysis.ipynb  LICENSE  README.md  updated_json_sharding_notebook.ipynb
Complete Python Code for KnowledgeReduce Project/: code_structure_analysis.md
Manus Review of Tasks/: knowledgereduce_implementation_todo.md  manus_task_prompt.md  refined_manus_task_prompt.md
Manus Task 10th Attempt/: CivicHonorsKGv20_improved.ipynb  improved_link_collection.py  improved_page_search.py  improvements_documentation.md  todo.md  (+5 more)
Manus Task 8th Attempt/: README.md  ROADMAP.md  TESTING.md  pyproject.toml  requirements.txt
Manus Task 8th Attempt/examples/: advanced_usage.py  basic_usage.py  visualization.py
Manus Task 8th Attempt/knowledge_graph_pkg/: __init__.py
Manus Task 8th Attempt/knowledge_graph_pkg/core/: __init__.py  knowledge_graph.py
Manus Task 8th Attempt/knowledge_graph_pkg/tests/: test_core.py
Manus Task 8th Attempt/knowledge_graph_pkg/utils/: __init__.py
Manus Task 8th Attempt/knowledge_graph_pkg/visualization/: __init__.py
(+188 files in other folders)
