[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge_graph_pkg"
version = "0.2.0"
description = "A Python package for creating and managing portable knowledge graphs"
readme = "README.md"
authors = [
    {name = "Nels Lindahl", email = "nels@nelslindahl.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["knowledge graph", "nlp", "bert", "question answering", "networkx"]
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.0",
    "nltk>=3.7",
    "spacy>=3.4",
    "beautifulsoup4>=4.11",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]
nlp = [
    "transformers>=4.25",
    "torch>=2.0",
    "sentence-transformers>=2.2",
]
viz = [
    "matplotlib>=3.5",
    "pyvis>=0.3",
]

[project.urls]
"Homepage" = "https://github.com/nelslindahlx/KnowledgeReduce"
"Bug Tracker" = "https://github.com/nelslindahlx/KnowledgeReduce/issues"
"Documentation" = "https://github.com/nelslindahlx/KnowledgeReduce#readme"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["knowledge_graph_pkg"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
